crates/nico-correlate/tests/snapshots/json_snapshot__one_event_per_severity.snap
---
source: crates/nico-correlate/tests/json_snapshot.rs
assertion_line: 47
expression: v
---
{
  "events": [
    {
      "kind": "WorkflowExecutionStarted",
      "severity": "info",
      "source": "temporal",
      "ts": "2023-11-14T22:13:20+00:00"
    },
    {
      "kind": "OOMKilled",
      "severity": "warning",
      "source": "k8s",
      "ts": "2023-11-14T22:14:20+00:00"
    },
    {
      "kind": "WorkflowExecutionFailed",
      "severity": "error",
      "source": "temporal",
      "ts": "2023-11-14T22:15:20+00:00"
    }
  ],
  "id": "wf-abc123",
  "id_type": "workflow",
  "sources_restricted": [],
  "sources_unavailable": [],
  "state": [],
  "version": 1
}
